# workshop_ao_vivo_airflow

./: .env  Dockerfile  README.md  airflow.cfg  exemplo_00.py  pyproject.toml  requirements.txt  requirementx.txt
.astro/: config.yaml
dags/: api_to_postgres.py  duckdb_custom_operator.py  main.py  minha_primeira_dag.py  minha_quarta_dag.py  minha_quinta_dag.py  minha_segunda_dag.py  minha_setima_dag.py  minha_sexta_dag.py  minha_terceira_dag.py
frontend/: exemplo_04.py
frontend/pipeline/: pipeline.py
include/: schema.py
src/: db.py
src/custom_operators/: postgres_to_duckdb_operator.py
