[tool.poetry]
name = "workshop-ao-vivo-airflow"
version = "0.1.0"
description = ""
authors = ["lvgalvaofilho <lvgalvaofilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
apache-airflow = "^2.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
